kubernetes/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kanban-app
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kanban
  template:
    metadata:
      labels:
        app: kanban
    spec:
      serviceAccountName: aws-load-balancer-controller 
      containers:
        - name: kanban
          image: 767398132018.dkr.ecr.us-east-1.amazonaws.com/mohammedsayed/kanban-app
          ports:
            - containerPort: 80
