kubernetes/manifests/kanban-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kanban-ingress
  namespace: kube-system
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443' # I Changed this from 'true' to '443' and fixed the issue with invalid parsing "true" - mosayed
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:767398132018:certificate/08d87802-3139-4dec-9695-7a7bed4ba8d1
    alb.ingress.kubernetes.io/actions.ssl-redirect: |
      {"Type": "redirect", "RedirectConfig": {"Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}
spec:
  ingressClassName: alb
  rules:
    - host: kanban.lab.mohammedsayed.com
      http:
        paths:
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: kanban-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kanban-service
                port:
                  number: 80
